--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,700&display=swap" rel="stylesheet">
-  <link href="/styles/site.css" rel="stylesheet">
+  <link href="./styles/site.css" rel="stylesheet">
 
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -17,7 +17,7 @@
 <body>
   <main class="container">
     <div class="column">
-      <img src="/images/image-product-desktop.jpg" alt="desktop size perfume image">
+      <img src="./images/image-product-desktop.jpg" alt="desktop size perfume image">
     </div>
     <div class="column">
       <p>PERFUME</p>
@@ -31,7 +31,7 @@
         <span class="sellPrice">$149.99</span><span class="origPrice">$169.99</span>
       </div>
 
-      <div class="addToCart"><img src="images/icon-cart.svg"> Add to Cart</div>
+      <div class="addToCart"><img src="./images/icon-cart.svg"> Add to Cart</div>
     </div>
   </main>
   <div class="attribution">
